<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    app:flow_verticalAlign="center"
    app:flow_horizontalAlign="center">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="320dp"
        android:layout_height="388dp"
        android:divider="@drawable/spacer_horizontal"
        android:layerType="hardware"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_choice"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="26sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/choice_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_200"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/jpy"
                android:textColor="@color/purple_500"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/choice_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_200"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:layout_marginStart="15dp"
                android:text="@string/eur"
                android:textColor="@color/purple_500"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/choice_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_200"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:layout_marginStart="15dp"
                android:text="@string/cad"
                android:textColor="@color/purple_500"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:paddingLeft="30sp"
            android:paddingTop="10sp"
            android:paddingRight="30sp"
            android:paddingBottom="10sp"
            android:text="@string/next"
            android:textSize="16sp"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>